openshift/setup/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: checkbot
  name: checkbot
spec:
  replicas: 1
  selector:
    app: checkbot
    deploymentconfig: checkbot
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: checkbot
        deploymentconfig: checkbot
    spec:
      containers:
        - command:
            - ./main
          args:
            - "-scriptBase=/app/scripts"
          image: >-
            172.30.1.1:5000/checkbot/checkbot
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 4444
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: checkbot
          ports:
            - containerPort: 4444
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 4444
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /app/scripts/operation
              name: scripts-operation
              readOnly: true
            - mountPath: /app/scripts/compliance
              name: scripts-compliance
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: checkbot
      serviceAccountName: checkbot
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 493
            name: scripts-operation
          name: scripts-operation
        - configMap:
            defaultMode: 493
            name: scripts-compliance
          name: scripts-compliance
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - checkbot
        from:
          kind: ImageStreamTag
          name: 'checkbot:latest'
          namespace: checkbot
      type: ImageChange
