openshift/setup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkbot
spec:
  selector:                  
    app: checkbot
  ports:
  - name: application
    port: 4444               
    protocol: TCP
    targetPort: 4444
